# anyones-IDE-everyomes-IDE

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/anyoneide/app/: AnyoneIDEApplication.kt  MainActivity.kt
app/src/main/java/com/anyoneide/app/core/: AndroidPackageManager.kt  AutoIndentationEngine.kt  BuildManager.kt  BuildSystemType.kt  CompilerService.kt  EditorManager.kt  EditorTheme.kt  FileManager.kt  GeminiApiService.kt  GitIntegration.kt  GradleBuildManager.kt  GradleFileModifier.kt  LanguageSupport.kt  PluginManager.kt  ProjectManager.kt  ProjectTemplates.kt  RealBuildTools.kt  RealTerminalCommands.kt  RootManager.kt  RustBuildManager.kt  RustBuildPlugin.kt  RustEditorManager.kt  RustExtensionManager.kt  RustGradleManager.kt  RustGradleSupport.kt  RustNativeBuildManager.kt  RustPluginManager.kt  RustSdkManager.kt  RustTerminalManager.kt  SDKManager.kt  SettingsManager.kt  ShizukuManager.kt  SyntaxHighlighter.kt  TerminalManager.kt  TerminalSetup.kt  ThemeManager.kt
app/src/main/java/com/anyoneide/app/core/templates/: BaseProjectTemplate.kt  ProjectTemplate.kt
app/src/main/java/com/anyoneide/app/data/: DataModule.kt
app/src/main/java/com/anyoneide/app/data/room/: Daos.kt  (+3 more)
app/src/main/java/com/anyoneide/app/model/: BookmarkedCommandEntity.kt  BuildArtifactData.kt  DataModels.kt  EditorFile.kt  PluginDependency.kt  RoomEntities.kt
app/src/main/java/com/anyoneide/app/receiver/: SystemEventReceiver.kt
app/src/main/java/com/anyoneide/app/service/: IDEBackgroundService.kt
app/src/main/java/com/anyoneide/app/viewmodel/: EnhancedMainViewModel.kt  SdkManagerViewModel.kt
app/src/main/jniLibs/: .gitkeep
app/src/main/jniLibs/arm64-v8a/: .gitkeep
app/src/main/jniLibs/armeabi-v7a/: .gitkeep
app/src/main/jniLibs/x86/: .gitkeep
app/src/main/jniLibs/x86_64/: .gitkeep
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  logo_anyone_ide.xml  splash_background.xml
app/src/main/res/layout/: activity_custom_splash.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
rust_native_build/: Cargo.toml
rust_native_build/.cargo/: config.toml
rust_native_build/src/: buildsystem.rs  compiler.rs  editor.rs  extensions.rs  gradlebuildsystem.rs  gradlefilemodifier.rs  lib.rs  pluginsystem.rs  sdkmanager.rs  terminal.rs
(+52 files in other folders)
